@@ -1,3 +1,7 @@
+13 March 2007
++ Removed border from icons. not xhtml compliant
++ changed style sheet to work under IE7 again
+
 5 March 2007
 + Changed control panel icon
 
